--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,6 @@
     <color name="colorAccent">#03DAC5</color>
     <color name="butons">#222321</color>
     <color name="backgound">#F2222020</color>
+    <color name="black">#90000000</color>
+    <color name="blackagenda">#10000000</color>
 </resources>
