--- a/app/src/main/res/layout/activity_servicos.xml
+++ b/app/src/main/res/layout/activity_servicos.xml
@@ -1,20 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/backgound"
+    android:background="@drawable/beautyguysagenda"
     android:orientation="vertical"
     android:padding="40px"
     tools:context=".ServicosActivity">
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:background="#393535"
+        android:id="@+id/linearLayout2"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="130dp"
+        android:layout_marginEnd="15dp"
+        android:layout_marginBottom="10dp"
+        android:background="@color/black"
         android:orientation="horizontal"
-        android:padding="20px">
+        android:padding="20px"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <TextView
             android:id="@+id/item1"
@@ -55,27 +64,35 @@
                 android:textSize="20dp" />
         </LinearLayout>
 
-        <Button
-            android:layout_width="wrap_content"
+        <ImageButton
+            android:id="@+id/btn1"
+            android:layout_width="90dp"
             android:layout_height="match_parent"
-            android:layout_below="@id/item1"
             android:layout_gravity="center"
-            android:background="@drawable/botoes_servicos"
-            android:text="AGENDAR"
-            android:textColor="#fff" />
+            android:background="@drawable/botoes_home"
+            android:scaleType="centerInside"
+            android:src="@drawable/agendar" />
+
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:layout_marginTop="10dp"
-        android:background="#393535"
+        android:id="@+id/linearLayout4"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="15dp"
+        android:layout_marginEnd="15dp"
+        android:layout_marginBottom="10dp"
+        android:background="@color/black"
         android:orientation="horizontal"
-        android:padding="20px">
+        android:padding="20px"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">
 
         <TextView
             android:id="@+id/item3"
-            android:layout_width="wrap_content"
+            android:layout_width="94dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginLeft="10dp"
@@ -107,30 +124,37 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
                 android:layout_marginEnd="10dp"
-                android:text="60 min"
+                android:text="1 hora"
                 android:textColor="#fff"
                 android:textSize="20dp" />
         </LinearLayout>
 
         android:textSize="20dp" />
 
-        <Button
-            android:layout_width="wrap_content"
+        <ImageButton
+            android:id="@+id/btn2"
+            android:layout_width="90dp"
             android:layout_height="match_parent"
-            android:layout_below="@id/item1"
             android:layout_gravity="center"
-            android:background="@drawable/botoes_servicos"
-            android:text="AGENDAR"
-            android:textColor="#fff" />
+            android:background="@drawable/botoes_home"
+            android:scaleType="centerInside"
+            android:src="@drawable/agendar" />
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:layout_marginTop="10dp"
-        android:background="#393535"
+        android:id="@+id/linearLayout3"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="15dp"
+        android:layout_marginEnd="15dp"
+        android:layout_marginBottom="10dp"
+        android:background="@color/black"
         android:orientation="horizontal"
-        android:padding="20px">
+        android:padding="20px"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout6"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout4">
 
         <TextView
             android:id="@+id/item4"
@@ -171,23 +195,31 @@
                 android:textSize="20dp" />
         </LinearLayout>
 
-        <Button
-            android:layout_width="wrap_content"
+        <ImageButton
+            android:id="@+id/btn3"
+            android:layout_width="90dp"
             android:layout_height="match_parent"
-            android:layout_below="@id/item1"
             android:layout_gravity="center"
-            android:background="@drawable/botoes_servicos"
-            android:text="AGENDAR"
-            android:textColor="#fff" />
+            android:background="@drawable/botoes_home"
+            android:scaleType="centerInside"
+            android:src="@drawable/agendar" />
+
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:layout_marginTop="10dp"
-        android:background="#393535"
+        android:id="@+id/linearLayout6"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="15dp"
+        android:layout_marginEnd="15dp"
+        android:layout_marginBottom="10dp"
+        android:background="@color/black"
         android:orientation="horizontal"
-        android:padding="20px">
+        android:padding="20px"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout5"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">
 
         <TextView
             android:id="@+id/item5"
@@ -223,28 +255,35 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
                 android:layout_marginEnd="10dp"
-                android:text="60 min"
+                android:text="1 hora"
                 android:textColor="#fff"
                 android:textSize="20dp" />
         </LinearLayout>
 
-        <Button
-            android:layout_width="wrap_content"
+        <ImageButton
+            android:id="@+id/btn4"
+            android:layout_width="90dp"
             android:layout_height="match_parent"
-            android:layout_below="@id/item1"
             android:layout_gravity="center"
-            android:background="@drawable/botoes_servicos"
-            android:text="AGENDAR"
-            android:textColor="#fff" />
+            android:background="@drawable/botoes_home"
+            android:scaleType="centerInside"
+            android:src="@drawable/agendar" />
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:layout_marginTop="10dp"
-        android:background="#393535"
+        android:id="@+id/linearLayout5"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="15dp"
+        android:layout_marginEnd="15dp"
+        android:layout_marginBottom="61dp"
+        android:background="@color/black"
         android:orientation="horizontal"
-        android:padding="20px">
+        android:padding="20px"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout6">
 
         <TextView
             android:id="@+id/item6"
@@ -280,77 +319,19 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
                 android:layout_marginEnd="10dp"
-                android:text="60 min"
-                android:textColor="#fff"
-                android:textSize="20dp" />
-        </LinearLayout>
-
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_below="@id/item1"
-            android:layout_gravity="center"
-            android:background="@drawable/botoes_servicos"
-            android:text="AGENDAR"
-            android:textColor="#fff" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:layout_marginTop="10dp"
-        android:background="#393535"
-        android:orientation="horizontal"
-        android:padding="20px">
-
-        <TextView
-            android:id="@+id/item2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginLeft="10dp"
-            android:text="Progressiva"
-            android:textColor="#fff"
-            android:textSize="20dp" />
-
-        <Space
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1" />
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:layout_marginEnd="10dp"
-                android:text="R$ 100,00"
-                android:textColor="#fff"
-                android:textSize="20dp" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:layout_marginEnd="10dp"
-                android:text="120 min"
+                android:text="1:30 hora"
                 android:textColor="#fff"
                 android:textSize="20dp" />
         </LinearLayout>
 
         <ImageButton
+            android:id="@+id/btn5"
             android:layout_width="90dp"
             android:layout_height="match_parent"
             android:layout_gravity="center"
-            android:background="@drawable/botoes_servicos"
+            android:background="@drawable/botoes_home"
             android:scaleType="centerInside"
-            android:src="@android:drawable/presence_away"
-            android:text="AGENDAR" />
-
+            android:src="@drawable/agendar" />
     </LinearLayout>
 
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
