--- a/app/src/main/res/layout/activity_servicos.xml
+++ b/app/src/main/res/layout/activity_servicos.xml
@@ -76,7 +76,7 @@
     </LinearLayout>
 
     <LinearLayout
-        android:id="@+id/linearLayout4"
+        android:id="@+id/linearLayout3"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginStart="15dp"
@@ -85,10 +85,10 @@
         android:background="@color/black"
         android:orientation="horizontal"
         android:padding="20px"
-        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout6"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout4">
 
         <TextView
             android:id="@+id/item3"
@@ -124,7 +124,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
                 android:layout_marginEnd="10dp"
-                android:text="1 hora"
+                android:text="60 min"
                 android:textColor="#fff"
                 android:textSize="20dp" />
         </LinearLayout>
@@ -142,7 +142,7 @@
     </LinearLayout>
 
     <LinearLayout
-        android:id="@+id/linearLayout3"
+        android:id="@+id/linearLayout4"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginStart="15dp"
@@ -151,10 +151,10 @@
         android:background="@color/black"
         android:orientation="horizontal"
         android:padding="20px"
-        app:layout_constraintBottom_toTopOf="@+id/linearLayout6"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout4">
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">
 
         <TextView
             android:id="@+id/item4"
@@ -255,7 +255,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
                 android:layout_marginEnd="10dp"
-                android:text="1 hora"
+                android:text="60 min"
                 android:textColor="#fff"
                 android:textSize="20dp" />
         </LinearLayout>
@@ -310,7 +310,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
                 android:layout_marginEnd="10dp"
-                android:text="R$ 50,00"
+                android:text="R$ 60,00"
                 android:textColor="#fff"
                 android:textSize="20dp" />
 
@@ -319,7 +319,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
                 android:layout_marginEnd="10dp"
-                android:text="1:30 hora"
+                android:text="60 min"
                 android:textColor="#fff"
                 android:textSize="20dp" />
         </LinearLayout>
